fixed vertical alignment of trending section"s topics text

--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -1306,7 +1306,7 @@ button:hover {
 		display: flex;
 		flex-direction: column;
 		width: 290px;
-		min-height: 500px;
+		min-height:min-content ;
 		background-color: rgb(247, 249, 249);
 		//border: 1px solid white;
 		//margin-top: 4.5px;
@@ -1382,9 +1382,9 @@ button:hover {
 				}
 			}
 
-			.trending-wrapper_topics {
-				margin-top: 3.5px;
-			}
+			// .trending-wrapper_topics {
+			// 	margin-top: 3.5px;
+			// }
 		}
 	}
 
@@ -1405,6 +1405,8 @@ button:hover {
 		font-family: chirp;
 		font-weight: 700;
 		font-size: 15px;
+		display: flex;
+		align-items: center;
 		//color: rgb(83, 100, 113);
 	}
 
@@ -1571,7 +1573,7 @@ button:hover {
 		@media screen and (width>=1078px) {
 		width: 348px;
 		padding:0;
-		
+
 	}
 	}
 }
